why is mixin like this